--- a/CheapOMail.html
+++ b/CheapOMail.html
@@ -4,35 +4,30 @@
                 <title>Cheapo Mail</title>
                 <meta http-equiv="Content-type" content="text/html;charset=ISO-8859-1" />
                 <script src='behaviour.js' type='text/javascript'></script>
-                 <link rel="stylesheet" type="text/css" href="cheapomail.css" />
+                 <link rel="stylesheet" type="text/css" href="cheapo.css" />
         </head>
 
         <body>
-                <div id="heading">
+                <div id="head">
                         <h1>CheapoMail</h1>
-                        <h4>Always be in touch</h4>
+                        <h4>Keep the Link!!</h4>
                 </div>
 
-                <form id="login-form"  action='action.php?a=login' method='post'>
+                <form id="loginForm"  action='action.php?a=login' method='post'>
 
-                        <div>
+                        
                                 <h1>Login:</h1>
-                                <label>
+                                <label class = "formField">
                                 <span>Username</span><input id="username" type="text" name="username" placeholder="Enter Username"/>
                                 </label>
 
-                                <label>
+                                <label class = "formField">
                                 <span>Password</span><input id="password" type="password" name="password" placeholder="Password"/>
                                 </label>
 
-                                <label>
+                                <label class = "formField">
                                 <input type="submit" value="Submit" />
                                 </label>
-
-                        </div>
-
-
                  </form> 
-
         </body>
 </html>
