--- a/CheapOMail.html
+++ b/CheapOMail.html
@@ -3,7 +3,7 @@
         <head>
                 <title>Cheapo Mail</title>
                 <meta http-equiv="Content-type" content="text/html;charset=ISO-8859-1" />
-                <script src='behaviour.js' type='text/javascript'></script>
+                <script src='action.js' type='text/javascript'></script>
                  <link rel="stylesheet" type="text/css" href="cheapo.css" />
         </head>
 
@@ -13,7 +13,7 @@
                         <h4>Keep the Link!!</h4>
                 </div>
 
-                <form id="loginForm"  action='action.php?a=login' method='post'>
+                <form id="loginForm"  action='act.php?a=login' method='post'>
 
                         
                                 <h1>Login:</h1>
